--- a/src/views/checklists/edit.ejs
+++ b/src/views/checklists/edit.ejs
@@ -4,7 +4,7 @@
 
 <section class="section">
 <div class="container">
-    <h1 class="title size-4">Editar Lista</h1>
+    <h1 class="title size-4">Editar Checklist</h1>
 
     <%- include('../layouts/form', {url: `/checklists/${checklist.id}?_method=PUT`, checklist: checklist}) %>
 </div>
