--- a/src/views/checklists/index.ejs
+++ b/src/views/checklists/index.ejs
@@ -6,10 +6,10 @@
     <div class="container">
         <div class="columns">
             <div class="column is-four-fifths">
-                <h1 class="title size-4">Listas de Tarefas</h1>
+                <h1 class="title size-4">Checklist</h1>
             </div>
             <div class="column is-one-fifth">
-                <a href="/checklists/new" class="button is-success is-small">Nova Lista</a>
+                <a href="/checklists/new" class="button is-success is-small">New checklist</a>
             </div>
         </div>
 
@@ -22,23 +22,23 @@
                             <%= checklist.name %>
                         </p>
                         <p class="subtitle is-size-6">
-                            <%= checklist.tasks.count %> tasks
+                            <%= checklist.tasks.length %> tasks
                         </p>
                     </div>
                     <footer class="card-footer">
                         <p class="card-footer-item">
                             <span>
-                                <a href="/checklists/<%= checklist._id %>">Ver</a>
+                                <a href="/checklists/<%= checklist._id %>">View</a>
                             </span>
                         </p>
                         <p class="card-footer-item">
                             <span>
-                                <a href="/checklists/<%= checklist._id %>/edit">Editar</a>
+                                <a href="/checklists/<%= checklist._id %>/edit">Edit</a>
                             </span>
                         </p>
                         <p class="card-footer-item">
                             <span>
-                                <a href="/checklists/<%= checklist._id %>?_method=DELETE" class="has-text-danger">Remover</a>
+                                <a href="/checklists/<%= checklist._id %>?_method=DELETE" class="has-text-danger">Remove</a>
                             </span>
                         </p>
                     </footer>
