--- a/src/views/checklists/new.ejs
+++ b/src/views/checklists/new.ejs
@@ -4,7 +4,7 @@
 
 <section class="section">
 <div class="container">
-    <h1 class="title size-4">Nova Lista</h1>
+    <h1 class="title size-4">Nova checklist</h1>
 
     <%- include('../layouts/form', {url: '/checklists?_method=POST', checklist: checklist}) %>
 </div>
