--- a/src/views/checklists/show.ejs
+++ b/src/views/checklists/show.ejs
@@ -6,26 +6,30 @@
     <div class="container">
         <div class="columns">
             <div class="column is-four-fifths">
-                <h1 class="title size-4"><%= checklist.name %></h1>
+                <h1 class="title size-4">
+                    <%= checklist.name %>
+                </h1>
             </div>
             <div class="column is-one-fifth">
-                <a href="add-task.html" class="button is-success is-small">Nova Tarefa</a>
-                <a href="/checklists" class="button is-small">Voltar</a>
+                <a href="/checklists/<%= checklist.id %>/tasks/new" class="button is-success is-small">New Task</a>
+                <a href="/checklists" class="button is-small">Go back</a>
             </div>
         </div>
 
         <hr />
-        <% checklist.tasks.forEach(task => { %>
+        <% checklist.tasks.forEach(task=> { %>
             <div class="columns">
-            <div class="column is-four-fifths">
-                <input type="checkbox" /> <%= task.name %>
-            </div>
+                <div class="column is-four-fifths <%= task.completed ? 'has-text-success is-italic' : '' %>">
+                    <input type="checkbox" onchange="setTagAsDone(this, '<%= task._id %>')" <%= task.completed ? 'checked' : '' %>/>
+                    <%= task.name %>
+                </div>
 
-            <div class="column is-one-fifth">
-                <button class="button is-danger is-small">Remover</button>
+                <div class="column is-one-fifth">
+                    <a href="/tasks/<%= task._id %>?_method=DELETE"
+                        class="button is-danger is-small">Remove</a>
+                </div>
             </div>
-            </div>
-        <% }) %>
+            <% }) %>
     </div>
 </section>
 
