--- a/src/views/layouts/form.ejs
+++ b/src/views/layouts/form.ejs
@@ -1,14 +1,14 @@
 <form method="POST" action="<%= url %>">
     <div class="field">
-        <label class="label">Nome</label>
+        <label class="label">Name</label>
         <div class="control">
             <input class="input" type="text" name="checklist[name]" placeholder="Tasks" value="<%= checklist.name %>">
-            <% if(checklist.err && checklist.err.hasOwnProperty('name')) { %>
-            <p class="is-danger help"><%= checklist.err.name.message %></p>
+            <% if(checklist.error && checklist.error.hasOwnProperty('name')) { %>
+            <p class="is-danger help"><%= checklist.error.name.message %></p>
             <% } %>
         </div>
     </div>
 
-    <button type="submit" class="button is-success">Salvar</button>
-    <a href="/checklists" class="button">Cancelar</a>
+    <button type="submit" class="button is-success">Save</button>
+    <a href="/checklists" class="button">Cancel</a>
 </form>
