--- a/src/views/pages/error.ejs
+++ b/src/views/pages/error.ejs
@@ -6,12 +6,12 @@
   <div class="hero-body has-text-centered">
     <div class="container">
       <h1 class="title">
-        Ops! Algo deu errado =(
+        Oops! Something went wrong =(
       </h1>
       <h2 class="subtitle">
         <%= error %>
       </h2>
-      <a href="/checklists" class="button is-light is-medium">Ir para Lista de Tarefas</a>
+      <a href="/checklists" class="button is-light is-medium">Go to to-do list!</a>
     </div>
   </div>
 </section>
